[package]
name = "boundnum"
description = "Bounded number type."
version = "0.1.1"
authors = ["noriapi <70106808+noriapi@users.noreply.github.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/noriapi/boundnum"
readme = "README.md"

[dependencies]
typenum = "1.12.0"
shrinkwraprs = "0.3.0"

[dev-dependencies]
impls = "1.0.3"
